# ai-agents-public

./: .env.example  .gitignore  GETTING_STARTED.md  LICENSE  MCP_SERVERS_CONFIG.md  README.md  action_servers.json  pyproject.toml  start_frontend.sh  start_orchestrator.sh
agent_configs/: README.md
agentkit/: pyproject.toml
agentkit/agentkit/: __init__.py  ai.py  base.py  config.py  constants.py  discovery.py  messaging.py  mqtt_bus.py  runbook_loader.py  schems.py
agents/: worker_agent.py
agents/assistant/: agent_operations.py  ai_functions.py  collaboration.py  main.py  message_handling.py  pyproject.toml
docs/: CURRENT_FEATURES.md  MCP_INTEGRATION.md  MCP_SERVERS_CONFIG.md  MCP_TOOLS_GUIDE.md
frontend/: README.md  index.html  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentDashboard.tsx  Chat.tsx  RunbookModal.tsx  RunbookTooltip.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/config/: api.ts
frontend/src/types/: runbook.ts
orchestrator/: README.md  pyproject.toml
orchestrator/app/: action_client.py  action_management.py  agent_lifecycle.py  database.py  main.py  models.py  routing.py  runbook_manager.py
runbooks/: assistant.md  bob.md
scripts/: kill-orchestrator.sh
