[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents"
version = "0.1.0"
description = "AI Agent Collaboration System"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0.0",
  "requests",
  "redis",
  "openai",
  "python-dotenv",
  "nest-asyncio>=1.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentkit*"]
